# Cpp-GPGPU-Mandelbrot

./: CMakeCache.txt  CMakeLists.txt  CpuMandel.cpp  CpuMandel.h  Default.sln  Default.vcxproj  Default.vcxproj.filters  MandelbrotSet.cpp  MandelbrotSet.h  The Mandelbrot Set.docx  Util.cpp  Util.h  cmake_install.cmake  cpu.cpp  cpu.sln  cpu.vcxproj  cpu.vcxproj.filters  gpu.cu  gpu.vcxproj  gpu.vcxproj.filters  mandelbrot.cpp
Debug/: Default.ilk  vc140.idb
Debug/Default.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Default.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cpu/: CMakeLists.txt
cpu.dir/Debug/cpu.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
gpu/: CMakeLists.txt
gpu.dir/Debug/gpu.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  gpu.lastbuildstate  gpu.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
gpu/include/: CpuMandel.h  MandelbrotSet.h  Util.h
gpu/src/: Util.cpp  gpu.cu
tools/: params.txt
